<resources>
    <string name="app_name">Cine.mpq</string>
    <string name="nombreMario">Mario</string>
    <string name="webButton">Ir al sitio Web</string>
    <string name="supportButton">Obtener Soporte</string>
    <string name="exitButton">Salir</string>
    <string name="infoToast">Esto es un Toast de informacion</string>
    <string name="alarm">Alarma</string>
    <string name="verPeliculaA">Ver pelicula A</string>
    <string name="verPeliculaB">Ver pelicula b</string>
    <string name="acercaDe">Acerca de</string>
    <string name="verPeliculaRelacionada">Ver pelicula Relacionada</string>
    <string name="editarPelicula">Editar Pelicula</string>
    <string name="volver">Volver</string>
    <string name="guardarEdit">Guardar</string>
    <string name="cancelarEdit">Cancelar</string>
    <string name="botonIMDB">Ver en IMDB</string>
    <string name="textViewDirector">Director</string>
    <string name="textViewAno">Año</string>
    <string name="peliculaA">Toy Story</string>
    <string name="peliculaB">The Godfather</string>
    <string name="resultOk">Operacion exitosa</string>
    <string name="resultFail">Operacion cancelada</string>
    <string name="directorPeliculaA">John Lasseter</string>
    <string name="directorPeliculaB">Francis Ford Coppola</string>
    <string name="formatoPeliculaA">Animacion, Disney.</string>
    <string name="formatoPeliculaB">Drama, Mafia</string>
    <string name="hintNotas">Notas...</string>
    <string name="hintTitulo">Titulo de la pelicula</string>
    <string name="hintDirector">Nombre del director</string>
    <string name="hintAno">Año</string>
    <string name="hintEnlace">Enlace a IMDB</string>
    <string name="hintComentarios">Comentarios</string>
    <string name="action">Acción</string>
    <string name="Scifi">Ciencia ficción</string>
    <string name="drama">Drama</string>
    <string name="comedia">Comedia</string>
    <string name="Terror">Terror</string>
    <string name="dvd" translatable="false">DVD</string>
    <string name="blueray" translatable="false">Blue-ray</string>
    <string name="online" translatable="false">Online</string>
    <string name="capturaFoto">Captura Fotografía</string>
    <string name="seleccionaImagen">Selecciona Imagen</string>




</resources>
