<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmListActivity">

    <Button
        android:id="@+id/showInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acercaDe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmAButton"
        app:layout_constraintVertical_bias="0.616" />

    <Button
        android:id="@+id/filmBButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verPeliculaB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/filmAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verPeliculaA"
        app:layout_constraintBottom_toTopOf="@+id/filmBButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />
</androidx.constraintlayout.widget.ConstraintLayout>